--- a/.github/workflows/deploy-databricks.yml
+++ b/.github/workflows/deploy-databricks.yml
@@ -20,4 +20,4 @@ jobs:
             -F path="/Shared/clean_simple_covid" \
             -F format="SOURCE" \
             -F language="PYTHON" \
-            -F content=@databricks_notebooks/clean_simple_covid
+            -F content=@databricks_notebooks/clean_simple_covid.py
