--- a/.github/workflows/deploy-databricks.yml
+++ b/.github/workflows/deploy-databricks.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           curl -X POST https://adb-1167077624059761.1.azuredatabricks.net/api/2.0/workspace/import \
             -H "Authorization: Bearer ${{ secrets.DATABRICKS_TOKEN }}" \
-            -F path="/Users/uongthanhthuy99@gmail.com/clean_simple_covid" \
+            -F path="/Workspace/Users/uongthanhthuy99@gmail.com/clean_simple_covid" \
             -F format="SOURCE" \
             -F language="PYTHON" \
             -F content=@databricks_notebooks/clean_simple_covid
