--- a/.github/workflows/deploy-databricks.yml
+++ b/.github/workflows/deploy-databricks.yml
@@ -13,9 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Run Databricks Job
-        uses: databricks/run-notebook@v0
-        with:
-          databricks-host: ${{ secrets.DATABRICKS_HOST }}
-          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
-          path: /Users/uongthanhthuy99@gmail.com/clean_simple_covid
+      - name: Upload notebook to Databricks
+        run: |
+          curl -X POST ${{ secrets.DATABRICKS_HOST }}/api/2.0/workspace/import \
+            -H "Authorization: Bearer ${{ secrets.DATABRICKS_TOKEN }}" \
+            -F path="/Users/uongthanhthuy99@gmail.com/clean_simple_covid" \
+            -F format="SOURCE" \
+            -F language="PYTHON" \
+            -F content=@databricks_notebooks/clean_simple_covid
